--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button onclick="location.href='pagina1.html'">Página 1</button>
         <button onclick="location.href='pagina2.html'">Página 2</button>
     </nav>
-    <h1>Bienvenido a la Página Principal</h1>
+    <h1>Bienvenidos a la Página Principal</h1>
     <p>Esta es la página principal de nuestro sitio web.</p>
 
      <p><b>Holaa, soy un cambio</b></p>
